--- a/index.html
+++ b/index.html
@@ -4,35 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinations Page</title>
+    <!--BootStrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <!--Custom Styles-->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1>Destinations Vacation Wishlist</h1>
       <p>
         Have you found the perfect destinations and ideas for your next vacation?! Fill out the form below and
         add this to your board
       </p>
-      <section>
-        <article>
-          <form action="">
-            <label for="destination-name">Destination</label>
-            <input type="text" placeholder="Enter destination name" id="destination-name" />
+      <section class="container row">
+        <div class="row">
+          <article class="col-12 col-sm-4">
+            <form id="user-input-form">
+              <label for="destination-name">Destination</label>
+              <input type="text" placeholder="Enter destination name" id="destination-name" />
 
-            <label for="location-name">Location</label>
-            <input type="text" placeholder="Enter destination location" id="location-name" />
+              <label for="location-name">Location</label>
+              <input type="text" placeholder="Enter destination location" id="location-name" />
 
-            <label for="photo">Location</label>
-            <input type="text" placeholder="photo url id="photo"" />
+              <label for="photo">Location</label>
+              <input type="text" placeholder="photo url id="photo"" />
 
-            <label for="description">Description</label>
-            <textarea id="description" placeholder="description" cols="30" rows="10"></textarea>
-          </form>
-        </article>
-        <article>
-          <h3>Enter Destination details</h3>
-          <div id="card-container">placeholder</div>
-        </article>
+              <label for="description">Description</label>
+              <textarea id="description" placeholder="description" cols="30" rows="10"></textarea>
+            </form>
+          </article>
+          <div id="card-container"></div>
+          <article class="col-12 col-sm-9">
+            <h3 id="card-container-heading">Enter Destination details</h3>
+            <div id="card-container">placeholder</div>
+          </article>
+        </div>
       </section>
     </header>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
